notes-k8s/backend-deployment.yaml
# This file tell kubernetes how to run and manage backend container
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-backend  #name of this deployment 
  namespace: notes-manager 
  labels:
    app: notes-backend  # helpful label for grouping 
    tier: backend


spec:
  replicas: 2       # Number of pods running (for load balancing)
  selector:
    matchLabels:
      app: notes-backend  #must match the label in the template below
  template:
    metadata:
      labels:
        app: notes-backend #label assigned to pods
    spec:
      containers:
      - name: notes-backend # name for the container 
        image: ashishkumarsn/notes-backend:latest
        ports:
        - containerPort: 5000   #The port backend app runs inside the container

        #Environment variable
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
